# Habit_Tracker

./: .env.sample  Dockerfile  data_habits.json  docker-compose.yaml  env_sample  pyproject.toml  readme.md
config/: celery.py  settings.py  urls.py
habit/: models.py  paginators.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habit/migrations/: 0004_alter_habit_options.py
habit/serializers/: habit_serializers.py
users/: models.py  urls.py  views.py
users/management/commands/: ccsu.py
users/migrations/: 0002_alter_user_options.py
users/serializers/: user_serializers.py
